--- a/angular-web-app/src/app/components/_admin/painting-overview/painting-overview.component.html
+++ b/angular-web-app/src/app/components/_admin/painting-overview/painting-overview.component.html
@@ -79,7 +79,7 @@
 
             <!-- Row shown when there is no matching data. -->
             <tr class="mat-row" *matNoDataRow>
-              <td class="mat-cell" colspan="6">No data matching the filter "{{input.value}}"</td>
+              <td class="mat-cell" colspan="6">Geen data beschikbaar.</td>
             </tr>
           </table>
         </div>
