--- a/angular-web-app/src/styles.scss
+++ b/angular-web-app/src/styles.scss
@@ -1,27 +1,34 @@
 /* Imports */
-@import '~bootstrap/scss/bootstrap';
+@import "~bootstrap/scss/bootstrap";
 @import "variables";
+@import "sweet-alerts.scss";
 
 /*************************************/
 /**             Globals             **/
 /*************************************/
 
-html, body {
+html,
+body {
   width: 100%;
   margin: 0;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.6;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: 'Poppins', sans-serif;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Poppins", sans-serif;
   font-weight: 700;
 }
 
 button {
-  outline:none !important;
+  outline: none !important;
 }
 button::-moz-focus-inner {
   border: 0 !important;
@@ -45,7 +52,8 @@ button::-moz-focus-inner {
 .main-raised {
   margin: -60px 0 0;
   border-radius: 10px;
-  box-shadow: 0 16px 24px 2px rgba(0,0,0,.14), 0 6px 30px 5px rgba(0,0,0,.12), 0 8px 10px -5px rgba(0,0,0,.2);
+  box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14),
+    0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
 }
 
 @media (min-width: 768px) {
@@ -95,7 +103,6 @@ button::-moz-focus-inner {
 /**             Buttons             **/
 /*************************************/
 
-
 /*************************************/
 /**             Cards               **/
 /*************************************/
@@ -138,7 +145,6 @@ mat-card {
   max-width: 100%;
 }
 
-
 /*************************************/
 /**             Images              **/
 /*************************************/
@@ -146,7 +152,6 @@ mat-card {
   height: 40px;
   width: 40px;
 }
-
 
 /*************************************/
 /**             Carousel            **/
@@ -162,7 +167,7 @@ mat-card {
 .carousel-control-next {
   justify-content: flex-end;
 }
-.carousel-control-prev-icon, 
+.carousel-control-prev-icon,
 .carousel-control-next-icon {
   display: inline-block;
   width: 56px;
@@ -170,7 +175,8 @@ mat-card {
   border-radius: 50%;
   background: no-repeat 50%/100% 100%;
   background-color: $color-secondary;
-  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
+    0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
 }
 
 .carousel-control-next-icon {
@@ -187,25 +193,44 @@ mat-card {
   background-color: $color-secondary;
 }
 
-
 /*************************************/
 /**             Helpers             **/
 /*************************************/
 
 .linear-overlay-black {
-  background-image: linear-gradient(to bottom, rgba(black, 0.9) 0%, rgba(black, 0.5) 100%);
+  background-image: linear-gradient(
+    to bottom,
+    rgba(black, 0.9) 0%,
+    rgba(black, 0.5) 100%
+  );
 }
 .linear-overlay-dark {
-  background-image: linear-gradient(to bottom, rgba($color-dark, 0.9) 0%, rgba($color-dark, 0.5) 100%);
+  background-image: linear-gradient(
+    to bottom,
+    rgba($color-dark, 0.9) 0%,
+    rgba($color-dark, 0.5) 100%
+  );
 }
 .linear-overlay-primary {
-  background-image: linear-gradient(to bottom, rgba($color-primary, 0.9) 0%, rgba($color-primary, 0.5) 100%);
+  background-image: linear-gradient(
+    to bottom,
+    rgba($color-primary, 0.9) 0%,
+    rgba($color-primary, 0.5) 100%
+  );
 }
 .linear-overlay-secondary {
-  background-image: linear-gradient(to bottom, rgba($color-secondary, 0.9) 0%, rgba($color-secondary, 0.5) 100%);
+  background-image: linear-gradient(
+    to bottom,
+    rgba($color-secondary, 0.9) 0%,
+    rgba($color-secondary, 0.5) 100%
+  );
 }
 .linear-overlay-accent {
-  background-image: linear-gradient(to bottom, rgba($color-accent, 0.9) 0%, rgba($color-accent, 0.5) 100%);
+  background-image: linear-gradient(
+    to bottom,
+    rgba($color-accent, 0.9) 0%,
+    rgba($color-accent, 0.5) 100%
+  );
 }
 
 .content-spacer {
@@ -278,14 +303,13 @@ hr.divider {
 
 .subtitle {
   margin-bottom: 0;
-  letter-spacing: .2em;
+  letter-spacing: 0.2em;
   font-weight: 700;
 }
 
 .p15 {
   padding: 15px !important;
 }
-
 
 /*************************************/
 /**              Admin              **/
@@ -355,7 +379,7 @@ hr.divider {
   margin-bottom: 1.34375em;
   border-radius: 4px 4px 0 0;
   border-bottom: 1px solid rgba(0, 0, 0, 0.42);
-  padding: .75em .75em 0 .75em;
+  padding: 0.75em 0.75em 0 0.75em;
   background-color: rgba(0, 0, 0, 0.04);
   height: fit-content;
 
@@ -451,7 +475,7 @@ td.mat-cell {
   color: $color-txt-light !important;
 }
 .txt-light-muted {
-  color: $color-txt-light-muted !important
+  color: $color-txt-light-muted !important;
 }
 
 .txt-dark {
@@ -460,7 +484,6 @@ td.mat-cell {
 .txt-dark-muted {
   color: $color-txt-dark-muted !important;
 }
-
 
 /***************/
 /* Scroll icon */
@@ -476,18 +499,20 @@ td.mat-cell {
   margin-left: -15px;
   bottom: 10px;
   margin-top: -25px;
-  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
+    0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
   border: 1px solid #fff;
   border-radius: 25px;
 }
 .icon-scroll:before {
-  content: '';
+  content: "";
   width: 8px;
   height: 8px;
   background: #fff;
   margin-left: -4px;
   top: 8px;
-  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
+    0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
   animation-duration: 1.5s;
   animation-iteration-count: infinite;
@@ -504,7 +529,6 @@ td.mat-cell {
   }
 }
 
-
 /***************/
 /* Burger menu */
 /***************/
@@ -518,10 +542,10 @@ td.mat-cell {
   -moz-transform: rotate(0deg);
   -o-transform: rotate(0deg);
   transform: rotate(0deg);
-  -webkit-transition: .5s ease-in-out;
-  -moz-transition: .5s ease-in-out;
-  -o-transition: .5s ease-in-out;
-  transition: .5s ease-in-out;
+  -webkit-transition: 0.5s ease-in-out;
+  -moz-transition: 0.5s ease-in-out;
+  -o-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
   cursor: pointer;
 }
 
@@ -538,10 +562,10 @@ td.mat-cell {
   -moz-transform: rotate(0deg);
   -o-transform: rotate(0deg);
   transform: rotate(0deg);
-  -webkit-transition: .25s ease-in-out;
-  -moz-transition: .25s ease-in-out;
-  -o-transition: .25s ease-in-out;
-  transition: .25s ease-in-out;
+  -webkit-transition: 0.25s ease-in-out;
+  -moz-transition: 0.25s ease-in-out;
+  -o-transition: 0.25s ease-in-out;
+  transition: 0.25s ease-in-out;
 }
 
 .animated-icon span:nth-child(1) {
@@ -590,4 +614,3 @@ td.mat-cell {
   top: 21px;
   left: 8px;
 }
-
