--- a/angular-web-app/src/variables.scss
+++ b/angular-web-app/src/variables.scss
@@ -24,3 +24,50 @@ $color-gradient-accent: linear-gradient(60deg,#AF473C,#7a1715);
 $masthead-height: 100vh;
 $smallhead-height: 60vh;
 
+
+/* Material */
+$color-red: #f44336;
+$color-red-dark: #d32f2f;
+$color-purple: #9c27b0;
+$color-purple-dark: #7b1fa2;
+$color-deeppurple: #673ab7;
+$color-deeppurple-dark: #512da8;
+$color-indigo: #3f51b5;
+$color-indigo-dark: #303f9f;
+$color-blue: #2196f3;
+$color-blue-dark: #1976d2;
+$color-cyan: #00bcd4;
+$color-cyan-dark: #0097a7;
+$color-teal: #009688;
+$color-teal-dark: #00796b;
+$color-green: #4caf50;
+$color-green-dark: #388e3c;
+$color-lightgreen: #8bc34a;
+$color-lightgreen-dark: #689f38;
+$color-yellow: #ffeb3b;
+$color-yellow-dark: #fbc02d;
+$color-amber: #ffc107;
+$color-amber-dark: #ffa000;
+$color-orange: #ff9800;
+$color-orange-dark: #f57c00;
+$color-deeporange: #ff5722;
+$color-deeporange-dark: #e64a19;
+$color-grey: #9e9e9e;
+$color-grey-dark: #616161;
+$color-bluegrey: #607d8b;
+$color-bluegrey-dark: #455a64;
+$color-gradient-red: linear-gradient(60deg, $color-red, $color-red-dark);
+$color-gradient-purple: linear-gradient(60deg, $color-purple, $color-purple-dark);
+$color-gradient-deeppurple: linear-gradient(60deg, $color-deeppurple, $color-deeppurple-dark);
+$color-gradient-indigo: linear-gradient(60deg, $color-indigo, $color-indigo-dark);
+$color-gradient-blue: linear-gradient(60deg, $color-blue, $color-blue-dark);
+$color-gradient-cyan: linear-gradient(60deg, $color-cyan, $color-cyan-dark);
+$color-gradient-teal: linear-gradient(60deg, $color-teal, $color-teal-dark);
+$color-gradient-green: linear-gradient(60deg, $color-green, $color-green-dark);
+$color-gradient-lightgreen: linear-gradient(60deg, $color-lightgreen, $color-lightgreen-dark);
+$color-gradient-yellow: linear-gradient(60deg, $color-yellow, $color-yellow-dark);
+$color-gradient-amber: linear-gradient(60deg, $color-amber, $color-amber-dark);
+$color-gradient-orange: linear-gradient(60deg, $color-orange, $color-orange-dark);
+$color-gradient-deeporange: linear-gradient(60deg, $color-deeporange, $color-deeporange-dark);
+$color-gradient-grey: linear-gradient(60deg, $color-grey, $color-grey-dark);
+$color-gradient-bluegrey: linear-gradient(60deg, $color-bluegrey, $color-bluegrey-dark);
