--- a/angular-web-app/src/sweet-alerts.scss
+++ b/angular-web-app/src/sweet-alerts.scss
@@ -1,245 +1,243 @@
-@import '~sweetalert2/src/variables';
-@import 'variables';
-@import '~sweetalert2/src/sweetalert2';
+@import "~sweetalert2/src/variables";
+@import "variables";
 
-
-$swal2-white:         #fff !default;
-$swal2-black:         #000 !default;
-$swal2-outline-color: rgba(100, 150, 200, .5) !default;
+$swal2-white: #fff;
+$swal2-black: #000;
+$swal2-outline-color: rgba(100, 150, 200, 0.5);
 
 // CONTAINER
-$swal2-container-padding: .625em !default;
+$swal2-container-padding: 0.625em;
 
 // BOX MODEL
-$swal2-width: 32em !default;
-$swal2-padding: 1.25em !default;
-$swal2-border: none !default;
-$swal2-border-radius: 5px !default;
-$swal2-box-shadow: #d9d9d9 !default;
+$swal2-width: 32em;
+$swal2-padding: 1.25em;
+$swal2-border: none;
+$swal2-border-radius: 5px;
+$swal2-box-shadow: #d9d9d9;
 
 // ANIMATIONS
-$swal2-show-animation: swal2-show .3s !default;
-$swal2-hide-animation: swal2-hide .15s forwards !default;
+$swal2-show-animation: swal2-show 0.3s;
+$swal2-hide-animation: swal2-hide 0.15s forwards;
 
 // BACKGROUND
-$swal2-background: $swal2-white !default;
+$swal2-background: $swal2-white;
 
 // TYPOGRAPHY
-$swal2-font: inherit !default;
-$swal2-font-size: 1rem !default;
+$swal2-font: inherit;
+$swal2-font-size: 14px;
 
 // BACKDROP
-$swal2-backdrop: rgba($swal2-black, .4) !default;
-$swal2-backdrop-transition: background-color .1s !default;
+$swal2-backdrop: rgba($swal2-black, 0.4);
+$swal2-backdrop-transition: background-color 0.1s;
 
 // HEADER
-$swal2-header-padding: 0 1.8em !default;
+$swal2-header-padding: 0 1.8em;
 
 // ICONS
-$swal2-icon-size: 5em !default;
-$swal2-icon-animations: true !default;
-$swal2-icon-margin: 1.25em auto 1.875em !default;
-$swal2-icon-font-family: inherit !default;
-$swal2-icon-font-size: 3.75em !default;
-$swal2-icon-border-color: #000 !default;
-$swal2-icon-zoom: null !default;
-$swal2-success: #a5dc86 !default;
-$swal2-success-border: rgba($swal2-success, .3) !default;
-$swal2-error: #f27474 !default;
-$swal2-warning: #f8bb86 !default;
-$swal2-info: #3fc3ee !default;
-$swal2-question: #87adbd !default;
+$swal2-icon-size: 5em;
+$swal2-icon-animations: true;
+$swal2-icon-margin: 1.25em auto 1.875em;
+$swal2-icon-font-family: inherit;
+$swal2-icon-font-size: 3.75em;
+$swal2-icon-border-color: #000;
+$swal2-icon-zoom: null;
+$swal2-success: $color-green;
+$swal2-success-border: rgba($swal2-success, 0.3);
+$swal2-error: $color-red;
+$swal2-warning: $color-amber;
+$swal2-info: $color-blue;
+$swal2-question: $color-teal;
 
 // IMAGE
-$swal2-image-margin: 1.25em auto !default;
+$swal2-image-margin: 1.25em auto;
 
 // TITLE
-$swal2-title-margin: 0 0 .4em !default;
-$swal2-title-color: lighten($swal2-black, 35) !default;
-$swal2-title-font-size: 1.875em !default;
+$swal2-title-margin: 0 0 0.4em;
+$swal2-title-color: lighten($swal2-black, 35);
+$swal2-title-font-size: 1.875em;
 
 // CONTENT
-$swal2-content-justify-content: center !default;
-$swal2-content-margin: 0 !default;
-$swal2-content-padding: 0 1.6em !default;
-$swal2-content-color: lighten($swal2-black, 33) !default;
-$swal2-content-font-size: 1.125em !default;
-$swal2-content-font-weight: normal !default;
-$swal2-content-line-height: normal !default;
-$swal2-content-text-align: center !default;
-$swal2-content-word-wrap: break-word !default;
+$swal2-content-justify-content: center;
+$swal2-content-margin: 0;
+$swal2-content-padding: 0 1.6em;
+$swal2-content-color: lighten($swal2-black, 33);
+$swal2-content-font-size: 1.125em;
+$swal2-content-font-weight: normal;
+$swal2-content-line-height: normal;
+$swal2-content-text-align: center;
+$swal2-content-word-wrap: break-word;
 
 // INPUT
-$swal2-input-margin: 1em auto !default;
-$swal2-input-width: 100% !default;
-$swal2-input-height: 2.625em !default;
-$swal2-input-padding: 0 .75em !default;
-$swal2-input-border: 1px solid lighten($swal2-black, 85) !default;
-$swal2-input-border-radius: .1875em !default;
-$swal2-input-box-shadow: inset 0 1px 1px rgba($swal2-black, .06) !default;
-$swal2-input-font-size: 1.125em !default;
-$swal2-input-background: inherit !default;
-$swal2-input-color: inherit !default;
-$swal2-input-transition: border-color .3s, box-shadow .3s !default;
+$swal2-input-margin: 1em auto;
+$swal2-input-width: 100%;
+$swal2-input-height: 2.625em;
+$swal2-input-padding: 0 0.75em;
+$swal2-input-border: 1px solid lighten($swal2-black, 85);
+$swal2-input-border-radius: 0.1875em;
+$swal2-input-box-shadow: inset 0 1px 1px rgba($swal2-black, 0.06);
+$swal2-input-font-size: 1.125em;
+$swal2-input-background: inherit;
+$swal2-input-color: inherit;
+$swal2-input-transition: border-color 0.3s, box-shadow 0.3s;
 
 // INPUT:FOCUS
-$swal2-input-focus-border: 1px solid #b4dbed !default;
-$swal2-input-focus-outline: none !default;
-$swal2-input-focus-box-shadow: 0 0 0 3px $swal2-outline-color !default;
+$swal2-input-focus-border: 1px solid #b4dbed;
+$swal2-input-focus-outline: none;
+$swal2-input-focus-box-shadow: 0 0 0 3px $swal2-outline-color;
 
 // TEXTAREA SPECIFIC VARIABLES
-$swal2-textarea-height: 6.75em !default;
-$swal2-textarea-padding: .75em !default;
+$swal2-textarea-height: 6.75em;
+$swal2-textarea-padding: 0.75em;
 
 // INPUT LABEL
-$swal2-input-label-margin: 1em auto !default;
-$swal2-input-label-justify-content: center !default;
+$swal2-input-label-margin: 1em auto;
+$swal2-input-label-justify-content: center;
 
 // VALIDATION MESSAGE
-$swal2-validation-message-justify-content: center !default;
-$swal2-validation-message-margin: 0 -2.7em !default;
-$swal2-validation-message-padding: .625em !default;
-$swal2-validation-message-background: lighten($swal2-black, 94) !default;
-$swal2-validation-message-color: lighten($swal2-black, 40) !default;
-$swal2-validation-message-font-size: 1em !default;
-$swal2-validation-message-font-weight: 300 !default;
-$swal2-validation-message-icon-background: $swal2-error !default;
-$swal2-validation-message-icon-color: $swal2-white !default;
-$swal2-validation-message-icon-zoom: null !default;
+$swal2-validation-message-justify-content: center;
+$swal2-validation-message-margin: 0 -2.7em;
+$swal2-validation-message-padding: 0.625em;
+$swal2-validation-message-background: lighten($swal2-black, 94);
+$swal2-validation-message-color: lighten($swal2-black, 40);
+$swal2-validation-message-font-size: 1em;
+$swal2-validation-message-font-weight: 300;
+$swal2-validation-message-icon-background: $swal2-error;
+$swal2-validation-message-icon-color: $swal2-white;
+$swal2-validation-message-icon-zoom: null;
 
 // PROGRESS STEPS
-$swal2-progress-steps-flex-wrap: wrap !default;
-$swal2-progress-steps-align-items: center !default;
-$swal2-progress-steps-max-width: 100% !default;
-$swal2-progress-steps-background: inherit !default;
-$swal2-progress-steps-margin: 0 0 1.25em !default;
-$swal2-progress-steps-padding: 0 !default;
-$swal2-progress-steps-font-weight: 600 !default;
-$swal2-progress-steps-distance: 2.5em !default;
+$swal2-progress-steps-flex-wrap: wrap;
+$swal2-progress-steps-align-items: center;
+$swal2-progress-steps-max-width: 100%;
+$swal2-progress-steps-background: inherit;
+$swal2-progress-steps-margin: 0 0 1.25em;
+$swal2-progress-steps-padding: 0;
+$swal2-progress-steps-font-weight: 600;
+$swal2-progress-steps-distance: 2.5em;
 $swal2-progress-step-width: 2em;
 $swal2-progress-step-height: 2em;
 $swal2-progress-step-border-radius: 2em;
-$swal2-progress-step-background: #add8e6 !default;
-$swal2-progress-step-color: $swal2-white !default;
-$swal2-active-step-background: #2778c4 !default;
-$swal2-active-step-color: $swal2-white !default;
+$swal2-progress-step-background: #add8e6;
+$swal2-progress-step-color: $swal2-white;
+$swal2-active-step-background: #2778c4;
+$swal2-active-step-color: $swal2-white;
 
 // FOOTER
-$swal2-footer-margin: 1.25em 0 0 !default;
-$swal2-footer-padding: 1em 0 0 !default;
-$swal2-footer-border-color: #eee !default;
-$swal2-footer-color: lighten($swal2-black, 33) !default;
-$swal2-footer-font-size: 1em !default;
+$swal2-footer-margin: 1.25em 0 0;
+$swal2-footer-padding: 1em 0 0;
+$swal2-footer-border-color: #eee;
+$swal2-footer-color: lighten($swal2-black, 33);
+$swal2-footer-font-size: 1em;
 
 // TIMER POGRESS BAR
-$swal2-timer-progress-bar-height: .25em;
-$swal2-timer-progress-bar-background: rgba($swal2-black, .2) !default;
+$swal2-timer-progress-bar-height: 0.25em;
+$swal2-timer-progress-bar-background: rgba($swal2-black, 0.2);
 
 // CLOSE BUTTON
-$swal2-close-button-align-items: center !default;
-$swal2-close-button-justify-content: center !default;
-$swal2-close-button-width: 1.2em !default;
-$swal2-close-button-height: 1.2em !default;
-$swal2-close-button-line-height: 1.2 !default;
-$swal2-close-button-position: absolute !default;
-$swal2-close-button-gap: 0 !default;
-$swal2-close-button-transition: color .1s ease-out !default;
-$swal2-close-button-border: none !default;
-$swal2-close-button-border-radius: $swal2-border-radius !default;
-$swal2-close-button-outline: null !default;
-$swal2-close-button-background: transparent !default;
-$swal2-close-button-color: lighten($swal2-black, 80) !default;
-$swal2-close-button-font-family: serif !default;
-$swal2-close-button-font-size: 2.5em !default;
+$swal2-close-button-align-items: center;
+$swal2-close-button-justify-content: center;
+$swal2-close-button-width: 1.2em;
+$swal2-close-button-height: 1.2em;
+$swal2-close-button-line-height: 1.2;
+$swal2-close-button-position: absolute;
+$swal2-close-button-gap: 0;
+$swal2-close-button-transition: color 0.1s ease-out;
+$swal2-close-button-border: none;
+$swal2-close-button-border-radius: $swal2-border-radius;
+$swal2-close-button-outline: null;
+$swal2-close-button-background: transparent;
+$swal2-close-button-color: lighten($swal2-black, 80);
+$swal2-close-button-font-family: serif;
+$swal2-close-button-font-size: 2.5em;
 
 // CLOSE BUTTON:HOVER
-$swal2-close-button-hover-transform: none !default;
-$swal2-close-button-hover-color: $swal2-error !default;
-$swal2-close-button-hover-background: transparent !default;
+$swal2-close-button-hover-transform: none;
+$swal2-close-button-hover-color: $swal2-error;
+$swal2-close-button-hover-background: transparent;
 
 // CLOSE BUTTON:FOCUS
-$swal2-close-button-focus-outline: none !default;
-$swal2-close-button-focus-box-shadow: inset 0 0 0 3px $swal2-outline-color !default;
+$swal2-close-button-focus-outline: none;
+$swal2-close-button-focus-box-shadow: 0px 5px 5px -3px rgb(0 0 0 / 20%), 0px 8px 10px 1px rgb(0 0 0 / 14%), 0px 3px 14px 2px rgb(0 0 0 / 12%);
 
 // ACTIONS
-$swal2-actions-flex-wrap: wrap !default;
-$swal2-actions-align-items: center !default;
-$swal2-actions-justify-content: center !default;
-$swal2-actions-width: 100% !default;
-$swal2-actions-margin: 1.25em auto 0 !default;
-$swal2-actions-padding: 0 1.6em !default;
+$swal2-actions-flex-wrap: wrap;
+$swal2-actions-align-items: center;
+$swal2-actions-justify-content: center;
+$swal2-actions-width: 100%;
+$swal2-actions-margin: 1.25em auto 0;
+$swal2-actions-padding: 0 1.6em;
 
 // CONFIRM BUTTON
-$swal2-confirm-button-order: null !default;
-$swal2-confirm-button-border: 0 !default;
-$swal2-confirm-button-border-radius: .25em !default;
-$swal2-confirm-button-background-color: #2778c4 !default;
-$swal2-confirm-button-color: $swal2-white !default;
-$swal2-confirm-button-font-size: 1.0625em !default;
+$swal2-confirm-button-order: null;
+$swal2-confirm-button-border: 0;
+$swal2-confirm-button-border-radius: 0.25em;
+$swal2-confirm-button-background-color: $color-primary;
+$swal2-confirm-button-color: $swal2-white;
+$swal2-confirm-button-font-size: 1.0625em;
 
 // DENY BUTTON
-$swal2-deny-button-order: null !default;
-$swal2-deny-button-border: 0 !default;
-$swal2-deny-button-border-radius: .25em !default;
-$swal2-deny-button-background-color: #d14529 !default;
-$swal2-deny-button-color: $swal2-white !default;
-$swal2-deny-button-font-size: 1.0625em !default;
+$swal2-deny-button-order: null;
+$swal2-deny-button-border: 0;
+$swal2-deny-button-border-radius: 0.25em;
+$swal2-deny-button-background-color: $color-red;
+$swal2-deny-button-color: $swal2-white;
+$swal2-deny-button-font-size: 1.0625em;
 
 // CANCEL BUTTON
-$swal2-cancel-button-order: null !default;
-$swal2-cancel-button-border: 0 !default;
-$swal2-cancel-button-border-radius: .25em !default;
-$swal2-cancel-button-background-color: #757575 !default;
-$swal2-cancel-button-color: $swal2-white !default;
-$swal2-cancel-button-font-size: 1.0625em !default;
+$swal2-cancel-button-order: null;
+$swal2-cancel-button-border: 0;
+$swal2-cancel-button-border-radius: 0.25em;
+$swal2-cancel-button-background-color: #fff;
+$swal2-cancel-button-color: $swal2-black;
+$swal2-cancel-button-font-size: 1.0625em;
 
 // COMMON VARIABLES FOR ALL BUTTONS
-$swal2-button-margin: .3125em !default;
-$swal2-button-padding: .625em 1.1em !default;
-$swal2-button-box-shadow: none !default;
-$swal2-button-font-weight: 500 !default;
-$swal2-button-darken-hover: rgba($swal2-black, .1) !default;
-$swal2-button-darken-active: rgba($swal2-black, .2) !default;
-$swal2-button-focus-outline: none !default;
-$swal2-button-focus-background-color: null !default;
-$swal2-button-focus-box-shadow: 0 0 0 3px $swal2-outline-color !default;
+$swal2-button-margin: 0.3125em;
+$swal2-button-padding: 6px 16px;
+$swal2-button-box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%), 0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
+$swal2-button-font-weight: 500;
+$swal2-button-darken-hover: rgba($swal2-black, 0.1);
+$swal2-button-darken-active: rgba($swal2-black, 0.2);
+$swal2-button-focus-outline: none;
+$swal2-button-focus-background-color: null;
+$swal2-button-focus-box-shadow: 0px 5px 5px -3px rgb(0 0 0 / 20%), 0px 8px 10px 1px rgb(0 0 0 / 14%), 0px 3px 14px 2px rgb(0 0 0 / 12%);
 
 // LOADER
-$swal2-loader-align-items: center !default;
-$swal2-loader-justify-content: center !default;
-$swal2-loader-width: 2.2em !default;
-$swal2-loader-height: 2.2em !default;
-$swal2-loader-margin: 0 1.875em !default;
-$swal2-loader-animation: swal2-rotate-loading 1.5s linear 0s infinite normal !default;
-$swal2-loader-border-width: .25em !default;
-$swal2-loader-border-style: solid !default;
-$swal2-loader-border-radius: 100% !default;
-$swal2-loader-border-color: #2778c4 transparent #2778c4 transparent !default;
+$swal2-loader-align-items: center;
+$swal2-loader-justify-content: center;
+$swal2-loader-width: 2.2em;
+$swal2-loader-height: 2.2em;
+$swal2-loader-margin: 0 1.875em;
+$swal2-loader-animation: swal2-rotate-loading 1.5s linear 0s infinite normal;
+$swal2-loader-border-width: 0.25em;
+$swal2-loader-border-style: solid;
+$swal2-loader-border-radius: 100%;
+$swal2-loader-border-color: #2778c4 transparent #2778c4 transparent;
 
 // TOASTS
-$swal2-toast-show-animation: swal2-toast-show .5s !default;
-$swal2-toast-hide-animation: swal2-toast-hide .1s forwards !default;
-$swal2-toast-border: none !default;
-$swal2-toast-box-shadow: 0 0 .625em #d9d9d9 !default;
-$swal2-toast-background: $swal2-white !default;
-$swal2-toast-close-button-width: .8em !default;
-$swal2-toast-close-button-height: .8em !default;
-$swal2-toast-close-button-line-height: .8 !default;
-$swal2-toast-width: auto !default;
-$swal2-toast-padding: .625em !default;
-$swal2-toast-header-padding: 0 !default;
-$swal2-toast-title-margin: 0 .6em !default;
-$swal2-toast-title-font-size: 1em !default;
-$swal2-toast-icon-font-size: 1.8em !default;
-$swal2-toast-content-padding: 0 !default;
-$swal2-toast-content-font-size: 1em !default;
-$swal2-toast-input-font-size: 1em !default;
-$swal2-toast-validation-font-size: 1em !default;
-$swal2-toast-buttons-font-size: 1em !default;
-$swal2-toast-button-focus-box-shadow: 0 0 0 1px $swal2-background, 0 0 0 3px $swal2-outline-color !default;
-$swal2-toast-footer-margin: .5em 0 0 !default;
-$swal2-toast-footer-padding: .5em 0 0 !default;
-$swal2-toast-footer-font-size: .8em !default;
+$swal2-toast-show-animation: swal2-toast-show 0.5s;
+$swal2-toast-hide-animation: swal2-toast-hide 0.1s forwards;
+$swal2-toast-border: none;
+$swal2-toast-box-shadow: 0 0 0.625em #d9d9d9;
+$swal2-toast-background: $swal2-white;
+$swal2-toast-close-button-width: 0.8em;
+$swal2-toast-close-button-height: 0.8em;
+$swal2-toast-close-button-line-height: 0.8;
+$swal2-toast-width: auto;
+$swal2-toast-padding: 0.625em;
+$swal2-toast-header-padding: 0;
+$swal2-toast-title-margin: 0 0.6em;
+$swal2-toast-title-font-size: 1em;
+$swal2-toast-icon-font-size: 1.8em;
+$swal2-toast-content-padding: 0;
+$swal2-toast-content-font-size: 1em;
+$swal2-toast-input-font-size: 1em;
+$swal2-toast-validation-font-size: 1em;
+$swal2-toast-buttons-font-size: 1em;
+$swal2-toast-button-focus-box-shadow: 0 0 0 1px $swal2-background,
+  0 0 0 3px $swal2-outline-color;
+$swal2-toast-footer-margin: 0.5em 0 0;
+$swal2-toast-footer-padding: 0.5em 0 0;
+$swal2-toast-footer-font-size: 0.8em;
 
-
-
+@import "~sweetalert2/src/sweetalert2";
