--- a/angular-web-app/src/styles.scss
+++ b/angular-web-app/src/styles.scss
@@ -29,6 +29,7 @@ h6 {
 
 button {
   outline: none !important;
+  text-transform: uppercase;
 }
 button::-moz-focus-inner {
   border: 0 !important;
@@ -36,6 +37,14 @@ button::-moz-focus-inner {
 
 *:focus {
   outline: none;
+}
+
+.mat-dropzone {
+  background-color: rgba(0, 0, 0, 0.04) !important;
+  border: 1px solid rgba(0, 0, 0, 0.42) !important;
+}
+.mat-dropzone:hover {
+  border: 2px solid rgba(0, 0, 0, 0.42) !important;
 }
 
 /*************************************/
