--- a/angular-web-app/src/sweet-alerts.scss
+++ b/angular-web-app/src/sweet-alerts.scss
@@ -194,13 +194,15 @@ $swal2-cancel-button-font-size: 1.0625em;
 // COMMON VARIABLES FOR ALL BUTTONS
 $swal2-button-margin: 0.3125em;
 $swal2-button-padding: 6px 16px;
-$swal2-button-box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%), 0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
+$swal2-button-box-shadow: none;
+//$swal2-button-box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%), 0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
 $swal2-button-font-weight: 500;
 $swal2-button-darken-hover: rgba($swal2-black, 0.1);
 $swal2-button-darken-active: rgba($swal2-black, 0.2);
 $swal2-button-focus-outline: none;
 $swal2-button-focus-background-color: null;
-$swal2-button-focus-box-shadow: 0px 5px 5px -3px rgb(0 0 0 / 20%), 0px 8px 10px 1px rgb(0 0 0 / 14%), 0px 3px 14px 2px rgb(0 0 0 / 12%);
+$swal2-button-focus-box-shadow: none;
+//$swal2-button-focus-box-shadow: 0px 5px 5px -3px rgb(0 0 0 / 20%), 0px 8px 10px 1px rgb(0 0 0 / 14%), 0px 3px 14px 2px rgb(0 0 0 / 12%);
 
 // LOADER
 $swal2-loader-align-items: center;
