--- a/angular-web-app/src/app/components/_admin/painting-add/painting-add.component.html
+++ b/angular-web-app/src/app/components/_admin/painting-add/painting-add.component.html
@@ -19,23 +19,24 @@
               <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12 col-md-6">
                 <mat-label>Titel</mat-label>
                 <input matInput id="title" placeholder="Titel" name="title" [(ngModel)]="painting.title"
-                  #title="ngModel" required />
+                  [disabled]="formDisabled" #title="ngModel" required />
                 <mat-hint [hidden]="title.valid || title.pristine">Titel is verplicht</mat-hint>
               </mat-form-field>
               <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12 col-md-6">
                 <mat-label>Artiest</mat-label>
                 <input matInput id="artist" placeholder="Artiest" name="artist" [(ngModel)]="painting.artist"
-                  #artist="ngModel" required />
+                  [disabled]="formDisabled" #artist="ngModel" required />
                 <mat-hint [hidden]="artist.valid || artist.pristine">Artiest is verplicht</mat-hint>
               </mat-form-field>
             </div>
 
             <div class="form-group row">
-              <mat-form-field [appearance]="formStyle" [color]="formColor" [color]="formColor"
+              <mat-form-field [appearance]="formStyle" [color]="formColor"
                 class="form-field col-12">
                 <mat-label>Omschrijving</mat-label>
                 <textarea matInput id="description" placeholder="Omschrijving" name="description"
-                  [(ngModel)]="painting.description" #description="ngModel" required></textarea>
+                  [(ngModel)]="painting.description" [disabled]="formDisabled" #description="ngModel"
+                  required></textarea>
                 <mat-hint [hidden]="description.valid || description.pristine">Omschrijving is verplicht</mat-hint>
               </mat-form-field>
             </div>
@@ -43,7 +44,8 @@
             <div class="form-group row">
               <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12 col-md-6">
                 <mat-label>Verf</mat-label>
-                <mat-select id="paint" name="paint" [(ngModel)]="painting.paint" #paint="ngModel" required>
+                <mat-select id="paint" name="paint" [(ngModel)]="painting.paint" [disabled]="formDisabled"
+                  #paint="ngModel" required>
                   <mat-option *ngFor="let paint of paints" [value]="paint">
                     {{ paint }}
                   </mat-option>
@@ -52,7 +54,8 @@
               </mat-form-field>
               <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12 col-md-6">
                 <mat-label>Materiaal</mat-label>
-                <mat-select id="material" name="material" [(ngModel)]="painting.material" #material="ngModel" required>
+                <mat-select id="material" name="material" [(ngModel)]="painting.material" [disabled]="formDisabled"
+                  #material="ngModel" required>
                   <mat-option *ngFor="let material of materials" [value]="material">
                     {{ material }}
                   </mat-option>
@@ -64,7 +67,8 @@
             <div class="form-group row">
               <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12 col-md-6">
                 <mat-label>Categorie</mat-label>
-                <mat-select id="category" name="category" [(ngModel)]="painting.category" #category="ngModel" required>
+                <mat-select id="category" name="category" [(ngModel)]="painting.category" [disabled]="formDisabled"
+                  #category="ngModel" required>
                   <mat-option *ngFor="let category of categories" [value]="category">
                     {{ category }}
                   </mat-option>
@@ -73,7 +77,8 @@
               </mat-form-field>
               <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12 col-md-6">
                 <mat-label>Status</mat-label>
-                <mat-select id="state" name="state" [(ngModel)]="painting.state" #state="ngModel" required>
+                <mat-select id="state" name="state" [(ngModel)]="painting.status" [disabled]="formDisabled"
+                  #state="ngModel" required>
                   <mat-option *ngFor="let state of states" [value]="state">
                     {{ state }}
                   </mat-option>
@@ -86,17 +91,17 @@
               <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12 col-md-6">
                 <mat-label>Prijs</mat-label>
                 <input matInput id="price" placeholder="Prijs" name="price" [(ngModel)]="painting.price"
-                  #price="ngModel" />
+                  [disabled]="formDisabled" #price="ngModel" />
               </mat-form-field>
               <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12 col-md-3">
                 <mat-label>Lengte</mat-label>
                 <input matInput id="length" placeholder="Lengte" name="length" [(ngModel)]="painting.length"
-                  #length="ngModel" />
+                  [disabled]="formDisabled" #length="ngModel" />
               </mat-form-field>
               <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12 col-md-3">
                 <mat-label>Breedte</mat-label>
                 <input matInput id="width" placeholder="Breedte" name="width" [(ngModel)]="painting.width"
-                  #width="ngModel" />
+                  [disabled]="formDisabled" #width="ngModel" />
               </mat-form-field>
             </div>
           </mat-card-content>
@@ -133,26 +138,32 @@
             <button mat-flat-button color="primary" type="button" class="mr-2" (click)="resetForm()">
               reset
             </button>
-            <button mat-flat-button color="accent" type="submit" [disabled]="!addPaintingForm.valid">
+            <button mat-flat-button color="accent" type="submit"
+              [disabled]="!addPaintingForm.valid || !this.selectedFiles.length">
               opslaan
             </button>
           </mat-card-content>
         </mat-card>
-
-
       </form>
     </div>
   </div>
 </div>
 
 
-<ng-template #modalContent>
-  <mat-dialog-content>
-    <img *ngFor="let url of fileUrls" [src]="url" class="img-thumbnail img-table mat-elevation-z8 m-3">
-  </mat-dialog-content>
-
-  <mat-dialog-actions align="end">
-    <button mat-button mat-dialog-close cdkFocusInitial>Oke</button>
-  </mat-dialog-actions>
-
-</ng-template>
+<swal title="Kies miniatuur" [allowOutsideClick]="focusAnimation" [showConfirmButton]="false" #thumbnailSwal>
+  <div *swalPortal class="row mt-3" #thumbnailOptions>
+    <div *ngFor="let url of painting.images" class="col-12 col-md-4">
+      <div class="img-thumbnail-option">
+        <img [src]="url" (click)="setThumbnail($event, url)" class="img-thumbnail mat-elevation-z4">
+        <div class="img-thumbnail-option-overlay">
+          <mat-icon>check_cricle_outline</mat-icon>
+        </div>
+      </div>
+    </div>
+    <div class="col-12 mt-3">
+      <button mat-flat-button color="accent" [disabled]="painting.thumbnail == null" (click)="thumbnailSwal.close()">
+        opslaan
+      </button>
+    </div>
+  </div>
+</swal>
