--- a/angular-web-app/src/app/components/_admin/painting-add/painting-add.component.html
+++ b/angular-web-app/src/app/components/_admin/painting-add/painting-add.component.html
@@ -31,8 +31,7 @@
             </div>
 
             <div class="form-group row">
-              <mat-form-field [appearance]="formStyle" [color]="formColor"
-                class="form-field col-12">
+              <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12">
                 <mat-label>Omschrijving</mat-label>
                 <textarea matInput id="description" placeholder="Omschrijving" name="description"
                   [(ngModel)]="painting.description" [disabled]="formDisabled" #description="ngModel"
