--- a/angular-web-app/src/app/components/_admin/painting-overview/painting-overview.component.html
+++ b/angular-web-app/src/app/components/_admin/painting-overview/painting-overview.component.html
@@ -70,7 +70,7 @@
                   <button mat-icon-button color="accent" class="mr-2">
                     <mat-icon>edit</mat-icon>
                   </button>
-                  <button mat-icon-button color="warn" (click)="deletePainting(painting.key)">
+                  <button mat-icon-button color="primary" (click)="deletePainting(painting.key)">
                     <mat-icon>delete</mat-icon>
                   </button>
                 </td>
@@ -81,7 +81,7 @@
 
               <!-- Row shown when there is no matching data. -->
               <tr class="mat-row" *matNoDataRow>
-                <td class="mat-cell" colspan="6">Geen data beschikbaar.</td>
+                <td class="mat-cell" colspan="7">Geen data beschikbaar.</td>
               </tr>
             </table>
           </div>
