--- a/angular-web-app/src/app/components/_pages/admin/admin.component.html
+++ b/angular-web-app/src/app/components/_pages/admin/admin.component.html
@@ -17,7 +17,7 @@
 
       <!-- Main content -->
       <div class="d-flex flex-column scroll-content-wrapper bg-light txt-dark">
-        <ngx-simplebar [options]="simplebarOptions" class="d-flex flex-column scroll-content h-100">
+        <div class="d-flex flex-column scroll-content h-100">
           <!-- Router Outlet -->
           <div [@fadeAnimation]="getRouterOutletState(outlet)" class="px-3" style="padding-top: 56px;">
             <router-outlet #outlet="outlet"></router-outlet>
@@ -25,7 +25,7 @@
 
           <!-- Footer -->
           <app-footer></app-footer>
-        </ngx-simplebar>
+        </div>
       </div>
     </mat-sidenav-content>
   </mat-sidenav-container>
