--- a/angular-web-app/src/app/components/gallery/gallery.component.html
+++ b/angular-web-app/src/app/components/gallery/gallery.component.html
@@ -64,11 +64,11 @@
 
 
 <!-- Gallery-->
-<div #shuffleContainer class="shuffle-container row my-4">
+<div #shuffleContainer id="shuffleContainer" class="shuffle-container row my-4">
   <app-painting-card *ngFor="let painting of paintings"
     class="shuffle-item col-xl-4 col-lg-4 col-md-6 col-sm-6 col-xs-12 my-3" [attr.data-category]="painting.category"
     [attr.data-paint]="painting.paint" [attr.data-material]="painting.material" [attr.data-status]="painting.status"
     [painting]="painting" [maxHeight]="maxHeight">
   </app-painting-card>
-  <div #shuffleSizer class="sizer-element col-xl-1 col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
+  <div #shuffleSizer id="shuffleSizer" class="sizer-element col-xl-1 col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
 </div>
